@@ -234,6 +234,8 @@ Bug Fixes
 
 * SOLR-9134: Fix RestManager.addManagedResource return value. (Christine Poerschke)
 
+* SOLR-9151: Fix SolrCLI so that bin/solr -e cloud example can be run from any CWD (janhoy)
+
 Optimizations
 ----------------------
 * SOLR-8722: Don't force a full ZkStateReader refresh on every Overseer operation.
